Dialogs: Fix padding on Firefox 108
Closes #522

--- a/theme/parts/dialogs.css
+++ b/theme/parts/dialogs.css
@@ -38,8 +38,10 @@ dialog {
 }
 
 /* Content */
-.dialog-content-box {
+.dialog-content-box,
+#dialogGrid {
 	padding: 24px;
+	padding-bottom: 0;
 }
 #titleContainer {
 	justify-content: center !important;
